# LO-RAT

./: README.md
core/: CMakeLists.txt
core/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
core/cmake/: toolchain-mingw.cmake
core/libs/sqlite3/: sqlite3.c  sqlite3.h
core/src/: beacon.cpp  beacon.h  config.h  crypto.cpp  crypto.h  dxgi_capture.cpp  dxgi_capture.h  main.cpp  utils.cpp  utils.h
core/src/modules/: cookie_stealer.cpp  cookie_stealer.h  keylogger.cpp  keylogger.h  live_screen.cpp  live_screen.h  password_stealer.cpp  password_stealer.h  screen_recorder.cpp  screen_recorder.h  system_ctrl.cpp  system_ctrl.h  webcam_recorder.cpp  webcam_recorder.h  wifi_info.cpp  wifi_info.h
docs/: API.md
panel/LO-Panel/Forms/: BuilderForm.cs  LiveScreenForm.cs  MainForm.cs
server/: main.go
server/internal/api/: handlers.go
